perf test fixes

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>calculus rest service</name>
+    <name>calculus microservice</name>
     <description>Homework by Futurice</description>
 
     <parent>
